--- a/style.css
+++ b/style.css
@@ -16,10 +16,11 @@
   }
   
   .container {
-    max-width: 1100px;
+    max-width: 700px;
     margin: auto;
     overflow: auto;
     padding: 0 2rem;
+    box-shadow: #333;
   }
   
   .main-header {
